--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -10,6 +10,7 @@
 
 body {
     margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 div #indent{
@@ -56,60 +57,25 @@ a:active#body {
     color: var(--darkPurple);
 }
 
-#projectPanel {
-    margin: 25px;
-    display: flex;
-    justify-content: center;
-}
-
-.projectSidePanel {
-    background-color: var(--white);
-    width: 25%;
-    height: 400px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+.center {
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    position: relative;
 }
 
-.divider {
-    width: 1%;
-    height: 380px;
-    background-color: var(--darkPurple);
-    display: flex;
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-top: 10px;
+.title {
+    font-size: 48px;
+    margin-bottom: 10px;
 }
 
-.projectsContainer {
+.text-box {
     width: 50%;
     display: flex;
-    justify-content: center;
-    height: 400px;
-    flex-wrap: wrap;
-    align-items: center;
-
+    margin: auto;
 }
 
-.divLink {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0px;
-    left: 0px;
-    z-index: 1;
+.text-box-text {
+    justify-content: center;
 }
 
-.projectLink {
-    width: 100px;
-    height: 100px;
-    background-color: var(--white);
-    text-align: center;
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.alt-section {
+    background-color: var(--white)
 }
