--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,11 +1,7 @@
 /* global css styles */
 
 :root {
-    --white: #E2CFEA;
-    --pastelPurple: #B084CC;
-    --yellow: #EED5C2;
-    --purple: #8B5FBF;
-    --darkPurple: #643A71;
+    --brightPurple: #B63BFE;
 }
 
 body {
@@ -39,43 +35,48 @@ a:active#header{
 
 a:link#body {
     text-decoration: none;
-    color: var(--darkPurple);
 }
 
 a:visited#body {
     text-decoration: none;
-    color: var(--pastelPurple);
 }
 
 a:hover#body {
     text-decoration: none;
-    color: var(--darkPurple);
 }
 
 a:active#body {
     text-decoration: none;
-    color: var(--darkPurple);
 }
 
 .center {
     text-align: center;
 }
 
-.title {
+.intro-div {
+    height: calc(100vh - 31px);
+    width: 100vw;
+    background-color: var(--brightPurple);
+    text-align: center;
     font-size: 48px;
-    margin-bottom: 10px;
+    color: white;
+    line-height: calc(100vh - 31px);
+    max-width: 100%;
 }
 
-.text-box {
-    width: 50%;
-    display: flex;
+.title {
+    text-align: center;
     margin: auto;
+    border-bottom: 10px solid var(--brightPurple);
 }
 
-.text-box-text {
+p {
+    font-size: 24px;
+}
+
+.wrap-center {
+    margin: auto;
+    display: flex;
     justify-content: center;
-}
-
-.alt-section {
-    background-color: var(--white)
+    max-width: 75%;
 }
