--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,7 +1,12 @@
 /* global css styles */
 
 :root {
-    --brightPurple: #B63BFE;
+    /* --purple: #B63BFE; */
+    --purple: #B83cda;
+    --green: #adda3c;
+    /* --green: #e4fe3b; */
+    --orange: #daa33c;
+    /* --orange: #fea93b */
 }
 
 body {
@@ -53,10 +58,10 @@ a:active#body {
     text-align: center;
 }
 
-.intro-div {
+.big-div.intro {
     height: calc(100vh - 31px);
     width: 100vw;
-    background-color: var(--brightPurple);
+    background-color: var(--purple);
     text-align: center;
     font-size: 48px;
     color: white;
@@ -64,19 +69,79 @@ a:active#body {
     max-width: 100%;
 }
 
-.title {
+.big-div {
+    height: 100vh;
+    width: 100vw;
+    background-color: var(--orange);
+    text-align: center;
+    font-size: 48px;
+    color: white;
+    line-height: 100vh;
+    max-width: 100%;
+}
+
+.title-purple {
     text-align: center;
     margin: auto;
-    border-bottom: 10px solid var(--brightPurple);
+    border-bottom: 10px solid var(--purple);
+}
+
+.title-green {
+    text-align: center;
+    margin: auto;
+    border-bottom: 10px solid var(--green);
+}
+
+.title-orange {
+    text-align: center;
+    margin: auto;
+    border-bottom: 10px solid var(--orange);
 }
 
 p {
-    font-size: 24px;
+    font-size: 18px;
 }
 
 .wrap-center {
     margin: auto;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     max-width: 75%;
+}
+
+
+#em {
+    color: var(--purple);
+    font-weight: bold;
+}
+
+a {
+    color: var(--orange);
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.sub-title-purple {
+    text-align: center;
+    margin: auto;
+    border-bottom: 5px solid var(--purple);
+    font-size: 20px;
+}
+
+.sub-title-green {
+    text-align: center;
+    margin: auto;
+    border-bottom: 5px solid var(--green);
+    font-size: 20px;
+}
+
+.sub-title-orange {
+    text-align: center;
+    margin: auto;
+    border-bottom: 5px solid var(--orange);
+    font-size: 20px;
+}
+
+.no-margin-top {
+    margin-top: 0px;
 }
